force-app/main/default/objects/AWS_Integration_Setting__mdt/AWS_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for AWS Webhook integration including Named Credential, HMAC secret, and endpoint path.</description>
    <label>AWS Integration Setting</label>
    <pluralLabel>AWS Integration Settings</pluralLabel>
</CustomObject>