force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this integration configuration is active and should be used for webhook calls</description>
    <inlineHelpText>Whether this integration configuration is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>