force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Endpoint_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Named_Credential__c</fullName>
    <description>Named Credential API name used for the webhook callout (e.g., "AWS_Webhook")</description>
    <inlineHelpText>Named Credential API name used for the webhook callout</inlineHelpText>
    <label>Endpoint Named Credential</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>