force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Payload_Builder_Class__c.field-meta.xml
<CustomField>
    <fullName>Payload_Builder_Class__c</fullName>
    <description>Fully qualified Apex class name that implements AWSWebhookPayloadBuilder (e.g., AWSDevOpsAgentPayloadBuilder)</description>
    <label>Payload Builder Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>