force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Response_Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Response_Handler_Class__c</fullName>
    <description>Fully qualified Apex class name that implements AWSWebhookResponseHandler (e.g., CaseFeedItemResponseHandler)</description>
    <label>Response Handler Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>