force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <description>HMAC secret key used to sign webhook requests for authentication</description>
    <inlineHelpText>HMAC secret key used to sign webhook requests</inlineHelpText>
    <label>Secret Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>