force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Timeout_Milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Milliseconds__c</fullName>
    <defaultValue>30000</defaultValue>
    <description>HTTP callout timeout in milliseconds (1-120000). Defaults to 30000 (30 seconds)</description>
    <inlineHelpText>HTTP callout timeout in milliseconds (1-120000)</inlineHelpText>
    <label>Timeout Milliseconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>