force-app/main/default/objects/AWS_Integration_Setting__mdt/fields/Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Path__c</fullName>
    <description>Path appended to the Named Credential endpoint URL (e.g., "/webhook/case-events")</description>
    <inlineHelpText>Path appended to the Named Credential endpoint URL</inlineHelpText>
    <label>Webhook Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>